--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -1,5 +1,6 @@
 #labels Featured
 package example;
+
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.List;
@@ -12,7 +13,6 @@ import com.yz.net.IoService;
 import com.yz.net.impl.IoServerImpl;
 
 public class ServerExample {
-
 	public static void main(String[] args) {
 		try {
 			//绑定一个本机端口
@@ -27,13 +27,13 @@ public class ServerExample {
 			//启动
 			acceptor.start();
 			
-			
 			while(true) {
 				Thread.sleep(1000);
 			}
 			
-		} catch (Exception e) {}
-
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
 	}
 
 	
