Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -7,6 +7,4 @@ IoService acceptor = new IoServerImpl(8899);
 = Details =
 
 Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+  IoService acceptor = new IoServerImpl(8899);
