Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -7,4 +7,4 @@ IoService acceptor = new IoServerImpl(8899);
 = Details =
 
 Add your content here.  Format your content with:
-  IoService acceptor = new IoServerImpl
+  <p>IoService acceptor = new IoServerImpl</p>
