--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -1,11 +1,4 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
+= 如何构建一个服务器的简单例子 =
 
 {{{
 package example;
