Edited wiki page through web user interface.

--- a/wiki/MemoryManager2.wiki
+++ b/wiki/MemoryManager2.wiki
@@ -4,4 +4,4 @@
 
 IoServer提供了二种内存管理机制，一种是ByteBuffer池，一种是大内存分块管理，ByteBuffer池相信大家都能理解，我们下面讲的是大内存分块管理
 
-大内存分块管理，其实并不是什么新的东西，我们所用的操作系统就是分块分页管理内存的，大内存分块管理在IoServer中是以一个大的ByteBuffer中划出需多小的ByteBuffer来进行管理的，首先内存管理器在构建时会向jvm申请一块非常大的内存形成一个ByteBuffer，当一个新的IoSession产生时，就会向这个ByteBuffer要一块子序列的ByteBuffer作为IoSession的输Buffer，当IoSession关闭时会把这块内存还给内存管理器。这种策略比较容易产生内存碎片，比如现在程序申请了3字节，再一段时间后释放，这3字节没有和空闲下来的其它内存形成一个连续的区间，如果在以后的程序运行中并没有申请小于3或等于3的空间，那么这块空间就形成碎片了，不过现在IoServer的项目成员正在考虑加入内存碎片整理机制.
+大内存分块管理，其实并不是什么新的东西，我们所用的操作系统就是分块分页管理内存的，大内存分块管理在IoServer中是以一个大的ByteBuffer中划出许多小的ByteBuffer来进行管理的，首先内存管理器在构建时会向jvm申请一块非常大的内存形成一个ByteBuffer，当一个新的IoSession产生时，就会向这个ByteBuffer要一块子序列的ByteBuffer作为IoSession的输入Buffer，当IoSession关闭时会把这块内存还给内存管理器。这种策略比较容易产生内存碎片，比如现在程序申请了3字节，再一段时间后释放，这3字节没有和空闲下来的其它内存形成一个连续的区间，如果在以后的程序运行中并没有申请小于3或等于3的空间，那么这块空间就形成碎片了，不过现在IoServer的项目成员正在考虑加入内存碎片整理机制.
